more test updates

--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -101,7 +101,7 @@
    "outputs": [],
    "source": [
     "# Configure the image formation process\n",
-    "shape = (80, 80)\n",
+    "shape = (81, 82)\n",
     "pad_scale = 1.5\n",
     "#scattering = cs.NufftScattering(shape=shape, pad_scale=pad_scale, eps=1e-5)\n",
     "scattering = cs.FourierSliceScattering(shape=shape, pad_scale=pad_scale)"
@@ -201,9 +201,9 @@
    "source": [
     "# Instantiate image filters\n",
     "fig, ax = plt.subplots(figsize=(3.5, 3.5))\n",
-    "micrograph_freqs = fftfreqs((800, 600), pixel_size=detector.pixel_size)\n",
-    "micrograph = ice.sample(micrograph_freqs) * optics(micrograph_freqs) + detector.sample(micrograph_freqs)\n",
-    "whiten = cs.WhiteningFilter(scattering.freqs, detector.pixel_size * micrograph_freqs, micrograph)\n",
+    "freqs = fftfreqs((800, 600), pixel_size=detector.pixel_size)\n",
+    "micrograph = ice.sample(freqs) * optics(freqs) + detector.sample(freqs)\n",
+    "whiten = cs.WhiteningFilter(scattering.shape, micrograph=micrograph)\n",
     "plot_image(irfft(whiten(fft(detector_model()))), fig, ax)"
    ]
   },
@@ -222,7 +222,7 @@
    "source": [
     "# Show forward model for a whitened image\n",
     "fig, ax = plt.subplots(figsize=(3.5, 3.5))\n",
-    "filters = [cs.LowpassFilter(scattering.padded_freqs, cutoff=0.667), cs.WhiteningFilter(scattering.padded_freqs, detector.pixel_size * micrograph_freqs, micrograph)]\n",
+    "filters = [cs.LowpassFilter(scattering.padded_shape, cutoff=0.95), cs.WhiteningFilter(scattering.padded_shape, micrograph=micrograph)]\n",
     "filtered_model = cs.GaussianImage(scattering=scattering, specimen=specimen, state=state, filters=filters)\n",
     "plot_image(filtered_model.render(), fig, ax)"
    ]
@@ -257,9 +257,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define subset of parameters over which to evaluate model, and jitted model\n",
-    "params = dict(view_psi=180.0, defocus_u=9000.0, alpha=1.0, N=1.0, mu=0.0, pixel_size=5.0)\n",
-    "jitted_model = jax.jit(lambda params: detector_model(params))"
+    "# Define jitted model\n",
+    "jitted_model = jax.jit(lambda params: detector_model(**params))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define subset of parameters over which to evaluate model\n",
+    "params = dict(view_psi=180.0, defocus_u=9000.0, alpha=1.0, N=1.0, mu=0.0, pixel_size=5.0)"
    ]
   },
   {
@@ -271,28 +280,8 @@
     "# Plot model with updated parameters.\n",
     "fig, axes = plt.subplots(ncols=2, figsize=(8, 6))\n",
     "ax1, ax2 = axes\n",
-    "plot_image(detector_model(), fig, ax1)\n",
-    "plot_image(detector_model(**params), fig, ax2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Benchmark jitted pipeline\n",
-    "# jitted_image = jitted_model(params)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Benchmark non-jitted pipeline\n",
-    "# image = detector_model(params)"
+    "plot_image(jitted_model({}), fig, ax1)\n",
+    "plot_image(jitted_model(params), fig, ax2)"
    ]
   },
   {
@@ -311,10 +300,11 @@
     "# Initialize the model and plot residuals\n",
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
-    "mask = cs.CircularMask(scattering.coords)\n",
+    "mask = cs.CircularMask(scattering.shape)\n",
+    "masks = [mask]\n",
     "observation_model = cs.GaussianImage(scattering=scattering, specimen=specimen, state=state)\n",
     "observed = mask(observation_model())\n",
-    "model = cs.GaussianImage(scattering=scattering, specimen=specimen, state=state, masks=[mask], observed=observed)\n",
+    "model = cs.GaussianImage(scattering=scattering, specimen=specimen, state=state, masks=masks, observed=observed)\n",
     "simulated, observed, residuals = model.render(), model.observed, model.residuals()\n",
     "plot_image(simulated, fig, ax1)\n",
     "plot_image(observed, fig, ax2)\n",
@@ -367,7 +357,18 @@
    "outputs": [],
    "source": [
     "# Jitted loss and gradient pipeline\n",
-    "grad_loss = jax.jit(jax.value_and_grad(lambda params: model(**params)))"
+    "jitted_loss = jax.jit(lambda params: model(**params))\n",
+    "jitted_grad_loss = jax.jit(jax.grad(lambda params: model(**params)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Benchmark loss pipeline\n",
+    "%timeit loss = jitted_loss(params).block_until_ready()"
    ]
   },
   {
@@ -377,7 +378,7 @@
    "outputs": [],
    "source": [
     "# Benchmark gradient pipeline\n",
-    "%timeit grad = grad_loss(params)"
+    "%timeit grad = jitted_grad_loss(params)"
    ]
   }
  ],
