--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -123,9 +123,9 @@
     "# Initialize the image formation pipeline\n",
     "pose = cs.EulerPose(offset_x=-50.0, offset_y=20.0, view_phi=-20, view_theta=100, view_psi=20)\n",
     "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast=.07)\n",
-    "ice = cs.ExponentialNoiseIce(key=jax.random.PRNGKey(seed=0), kappa=0.0, xi=1e-3, gamma=0.0)\n",
+    "ice = cs.ExpIce(key=jax.random.PRNGKey(seed=0), kappa_i=0.0, beta_i=1e-3, lambda_i=0.0)\n",
     "exposure = cs.UniformExposure(N=1, mu=0)\n",
-    "detector = cs.WhiteNoiseDetector(pixel_size=5.29, key=jax.random.PRNGKey(seed=1234), alpha=1.0)"
+    "detector = cs.WhiteDetector(pixel_size=5.29, key=jax.random.PRNGKey(seed=1234), lambda_d=1.0)"
    ]
   },
   {
@@ -380,6 +380,13 @@
     "# Benchmark gradient pipeline\n",
     "%timeit grad = jitted_grad_loss(params)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
