remove redundant subclassing. no longer needed with Kernels. however, this may break model.update for arbitrary nested parameters when kernels share parameter names.

--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -123,9 +123,9 @@
     "# Initialize the image formation pipeline\n",
     "pose = cs.EulerPose(offset_x=-50.0, offset_y=20.0, view_phi=-20, view_theta=100, view_psi=20)\n",
     "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast=.07)\n",
-    "ice = cs.ExpIce(key=jax.random.PRNGKey(seed=0), kappa_i=0.0, beta_i=1e-3, lambda_i=0.0)\n",
+    "ice = cs.GaussianIce(key=jax.random.PRNGKey(seed=0))\n",
     "exposure = cs.UniformExposure(N=1, mu=0)\n",
-    "detector = cs.WhiteDetector(pixel_size=5.29, key=jax.random.PRNGKey(seed=1234), lambda_d=1.0)"
+    "detector = cs.GaussianDetector(pixel_size=5.29, key=jax.random.PRNGKey(seed=1234))"
    ]
   },
   {
