more sensible naming inside kernel classes

--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -123,7 +123,7 @@
     "# Initialize the image formation pipeline\n",
     "pose = cs.EulerPose(offset_x=-50.0, offset_y=20.0, view_phi=-20, view_theta=100, view_psi=20)\n",
     "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast=.07)\n",
-    "ice = cs.GaussianIce(key=jax.random.PRNGKey(seed=0))\n",
+    "ice = cs.GaussianIce(key=jax.random.PRNGKey(seed=0), variance=cs.Exp(amp=0.1, scale=1.0))\n",
     "exposure = cs.UniformExposure(N=1, mu=0)\n",
     "detector = cs.GaussianDetector(pixel_size=5.29, key=jax.random.PRNGKey(seed=1234))"
    ]
