--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -83,8 +83,9 @@
    "source": [
     "# Read template into either an ElectronCloud or ElectronGrid\n",
     "resolution = 5.28  # Angstroms\n",
-    "#specimen = cs.ElectronCloud.from_file(filename, resolution=resolution, config=dict(atol=1e-8))\n",
-    "specimen = cs.ElectronGrid.from_file(filename, resolution=resolution, config=dict(pad_scale=1.5))"
+    "#density = cs.ElectronCloud.from_file(filename, resolution=resolution, config=dict(atol=1e-8))\n",
+    "density = cs.ElectronGrid.from_file(filename, resolution=resolution, config=dict(pad_scale=1.5))\n",
+    "specimen = cs.Specimen(density=density)"
    ]
   },
   {
