--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -84,8 +84,8 @@
     "# Read template into either an ElectronCloud or ElectronGrid\n",
     "resolution = 5.28  # Angstroms\n",
     "#density = cs.ElectronCloud.from_file(filename, resolution=resolution, config=dict(atol=1e-8))\n",
-    "density = cs.ElectronGrid.from_file(filename, resolution=resolution, config=dict(pad_scale=1.5))\n",
-    "specimen = cs.Specimen(density=density)"
+    "density = cs.ElectronGrid.from_file(filename, config=dict(pad_scale=1.5))\n",
+    "specimen = cs.Specimen(density=density, resolution=resolution)"
    ]
   },
   {
