skeleton in place for a Helix implementation (#3) with conformational heterogeneity (#13). required removing Specimen.view.

--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -85,7 +85,7 @@
     "resolution = 5.28  # Angstroms\n",
     "#density = cs.ElectronCloud.from_file(filename, resolution=resolution, config=dict(atol=1e-8))\n",
     "density = cs.ElectronGrid.from_file(filename, config=dict(pad_scale=1.5))\n",
-    "specimen = cs.Specimen(density=density, resolution=resolution)"
+    "specimen = cs.Specimen(density, resolution=resolution)"
    ]
   },
   {
