Image model refactoring. The specimen needs to know about the optics for #3. Exposure model should scale image, not rescale it.

--- a/tutorials/test-helix.ipynb
+++ b/tutorials/test-helix.ipynb
@@ -168,7 +168,7 @@
    "outputs": [],
    "source": [
     "# More helical parameters\n",
-    "pitch = 2*np.pi * rise / np.deg2rad(twist)  # Helical pitch (distance between turns)\n",
+    "pitch = 2*np.pi * rise / np.deg2rad(twist)  # Helical pitch (distance between turns of a full helix)\n",
     "turns_per_repeat = repeat / pitch  # Number of turns\n",
     "subunits_per_repeat = repeat / rise  # Number of points per turn"
    ]
