--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -125,8 +125,8 @@
     "pose = cs.EulerPose(offset_x=-50.0, offset_y=20.0, view_phi=-20, view_theta=100, view_psi=20)\n",
     "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast=.07)\n",
     "ice = cs.GaussianIce(key=jax.random.PRNGKey(seed=0), variance=cs.Exp(amplitude=0.1, scale=1.0))\n",
-    "exposure = cs.UniformExposure(N=1, mu=0)\n",
-    "detector = cs.GaussianDetector(pixel_size=5.29, key=jax.random.PRNGKey(seed=1234))"
+    "exposure = cs.UniformExposure(N=1e5, mu=0.0)\n",
+    "detector = cs.GaussianDetector(pixel_size=5.29, key=jax.random.PRNGKey(seed=1234), variance=cs.Constant(1.0))"
    ]
   },
   {
@@ -203,7 +203,7 @@
     "# Instantiate image filters\n",
     "fig, ax = plt.subplots(figsize=(3.5, 3.5))\n",
     "freqs = fftfreqs((800, 600), pixel_size=detector.pixel_size)\n",
-    "micrograph = ice.sample(freqs) * optics(freqs) + detector.sample(freqs)\n",
+    "micrograph = ice.sample(freqs) * optics(freqs) + fft(detector.sample(freqs))\n",
     "whiten = cs.WhiteningFilter(scattering.shape, micrograph=micrograph)\n",
     "plot_image(irfft(whiten(fft(detector_model()))), fig, ax)"
    ]
@@ -269,7 +269,7 @@
    "outputs": [],
    "source": [
     "# Define subset of parameters over which to evaluate model\n",
-    "params = dict(view_psi=180.0, defocus_u=9000.0, alpha=1.0, N=1.0, mu=0.0, pixel_size=5.0)"
+    "params = dict(view_psi=180.0, defocus_u=9000.0, alpha=1.0, N=5e4, mu=0.0, pixel_size=5.0)"
    ]
   },
   {
