first pass at computing a helical net

--- a/tutorials/test-helix.ipynb
+++ b/tutorials/test-helix.ipynb
@@ -55,6 +55,20 @@
     "    divider = make_axes_locatable(ax)\n",
     "    cax = divider.append_axes(\"right\", size=\"5%\", pad=0.05)\n",
     "    fig.colorbar(im, cax=cax)\n",
+    "    return fig, ax\n",
+    "\n",
+    "def plot_images(images, **kwargs):\n",
+    "    nimages = len(images)\n",
+    "    fig, axes = plt.subplots(ncols=nimages, figsize=(4*nimages, 6))\n",
+    "    for idx, ax in enumerate(axes):\n",
+    "        image = images[idx]\n",
+    "        plot_image(image, fig, ax, **kwargs)\n",
+    "    return fig, axes\n",
+    "\n",
+    "def plot_net(theta, z, **kwargs):\n",
+    "    fig, ax = plt.subplots(figsize=(4, 4))\n",
+    "    ax.set(xlabel=r\"azimuthal angle, $\\theta$\", ylabel=r\"axial rise, $z$\")\n",
+    "    ax.scatter(theta, z, **kwargs)\n",
     "    return fig, ax"
    ]
   },
@@ -76,8 +90,7 @@
    "source": [
     "# Helical parameters\n",
     "rise = 9.42  # Angstroms\n",
-    "twist = 27.71  # Degrees\n",
-    "repeat = 400.0  # Angstroms"
+    "twist = 27.71  # Degrees"
    ]
   },
   {
@@ -86,11 +99,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read template into an ElectronGrid\n",
+    "# Initialize the Specimen\n",
     "resolution = 5.28  # Angstroms\n",
     "density = cs.ElectronGrid.from_file(filename, config=dict(pad_scale=1.5))\n",
     "monomer = cs.Specimen(density=density, resolution=resolution)\n",
-    "helix = cs.Helix(subunit=monomer, rise=rise, twist=twist, repeat=repeat)"
+    "helix = cs.Helix(subunit=monomer, rise=rise, twist=twist, radius=1.0, n_start=3, n_subunits=30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# View the helical net\n",
+    "lattice = helix.lattice\n",
+    "theta, z = jnp.arctan2(lattice[:, 1], lattice[:, 0]), lattice[:, 2]\n",
+    "plot_net(theta, z)\n"
    ]
   },
   {
@@ -135,89 +160,9 @@
    "outputs": [],
    "source": [
     "# Plot models\n",
-    "fig, axes = plt.subplots(ncols=2, figsize=(8, 6))\n",
-    "ax1, ax2 = axes\n",
-    "im1 = plot_image(scattering_model(), fig, ax1)\n",
-    "im2 = plot_image(optics_model(), fig, ax2)\n",
+    "fig, axes = plot_images([scattering_model(), optics_model()])\n",
     "plt.tight_layout()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Parameters of tobacco mosaic virus\n",
-    "#twist = np.deg2rad(22.03)\n",
-    "#rise = 1.408  # Angstroms\n",
-    "#repeat = 69  # Angstroms"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's plot the helical net given by these parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# More helical parameters\n",
-    "pitch = 2*np.pi * rise / np.deg2rad(twist)  # Helical pitch (distance between turns of a full helix)\n",
-    "turns_per_repeat = repeat / pitch  # Number of turns\n",
-    "subunits_per_repeat = repeat / rise  # Number of points per turn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "subunits_per_repeat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Generate points for the helix\n",
-    "t = np.linspace(0, 2 * np.pi * turns_per_repeat, int(turns_per_repeat * subunits_per_repeat))\n",
-    "x = np.cos(t)\n",
-    "y = np.sin(t)\n",
-    "z = pitch * t / (2 * np.pi)\n",
-    "\n",
-    "azimuth = np.arctan2(y, x)\n",
-    "\n",
-    "# Create a 2D projection\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.scatter(azimuth, z)\n",
-    "\n",
-    "# Add labels\n",
-    "ax.set_xlabel('X')\n",
-    "ax.set_ylabel('Y')\n",
-    "\n",
-    "# Show the helix\n",
-    "plt.grid(True)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
