equinox overhaul. there is an odd bug when wrapping equinox.field, but this will do for now

--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -55,7 +55,7 @@
    "source": [
     "# Image simulator imports\n",
     "import cryojax.simulator as cs\n",
-    "from cryojax.utils import fft, irfft, fftfreqs"
+    "from cryojax.utils import fftn, irfftn, fftfreqs"
    ]
   },
   {
@@ -135,6 +135,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "type(pose.offset_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from jaxtyping import Float, Complex, ArrayLike\n",
+    "isinstance(pose.offset_x, (Float[ArrayLike, \"\"], Complex[ArrayLike, \"\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Compile the image formation pipeline into the PipelineState\n",
     "state = cs.PipelineState(pose=pose, ice=ice, optics=optics, exposure=exposure, detector=detector)"
    ]
@@ -203,9 +222,9 @@
     "# Instantiate image filters\n",
     "fig, ax = plt.subplots(figsize=(3.5, 3.5))\n",
     "freqs = fftfreqs((800, 600), pixel_size=detector.pixel_size)\n",
-    "micrograph = ice.sample(freqs) * optics(freqs) + fft(detector.sample(freqs))\n",
+    "micrograph = ice.sample(freqs) * optics(freqs) + fftn(detector.sample(freqs))\n",
     "whiten = cs.WhiteningFilter(scattering.shape, micrograph=micrograph)\n",
-    "plot_image(irfft(whiten(fft(detector_model()))), fig, ax)"
+    "plot_image(irfftn(whiten(fftn(detector_model()))), fig, ax)"
    ]
   },
   {
@@ -258,8 +277,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define jitted model\n",
-    "jitted_model = jax.jit(lambda params: detector_model(**params))"
+    "def build_pipeline(pixel_size: jax.Array) -> cs.GaussianImage:\n",
+    "    # Build the PipelineState\n",
+    "    state = cs.PipelineState(\n",
+    "        pose=pose, optics=optics, detector=detector.update(pixel_size=pixel_size), ice=ice, exposure=exposure\n",
+    "    )\n",
+    "    # Build the model\n",
+    "    model = cs.GaussianImage(\n",
+    "        scattering=scattering, specimen=specimen, state=state\n",
+    "    )\n",
+    "    return model\n",
+    "\n",
+    "@jax.jit\n",
+    "def pipeline(pixel_size: jax.Array) -> jax.Array:\n",
+    "    model = build_pipeline(pixel_size)\n",
+    "    return model()"
    ]
   },
   {
@@ -268,21 +300,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define subset of parameters over which to evaluate model\n",
-    "params = dict(view_psi=180.0, defocus_u=9000.0, alpha=1.0, N=5e4, mu=0.0, pixel_size=5.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot model with updated parameters.\n",
+    "# Plot jitted model with updated parameters.\n",
     "fig, axes = plt.subplots(ncols=2, figsize=(8, 6))\n",
     "ax1, ax2 = axes\n",
-    "plot_image(jitted_model({}), fig, ax1)\n",
-    "plot_image(jitted_model(params), fig, ax2)"
+    "plot_image(pipeline(detector.pixel_size), fig, ax1)\n",
+    "plot_image(pipeline(2*detector.pixel_size), fig, ax2)"
    ]
   },
   {
@@ -306,7 +328,7 @@
     "observation_model = cs.GaussianImage(scattering=scattering, specimen=specimen, state=state)\n",
     "observed = mask(observation_model())\n",
     "model = cs.GaussianImage(scattering=scattering, specimen=specimen, state=state, masks=masks, observed=observed)\n",
-    "simulated, observed, residuals = model.render(), model.observed, model.residuals()\n",
+    "simulated, observed, residuals = model.render(), model.observed, model.residuals\n",
     "plot_image(simulated, fig, ax1)\n",
     "plot_image(observed, fig, ax2)\n",
     "plot_image(residuals, fig, ax3)\n",
@@ -326,9 +348,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Loss and gradient pipelines\n",
-    "loss = lambda params: model(**params)\n",
-    "grad_loss = jax.grad(lambda params: model(**params))"
+    "def build_loss(pixel_size: jax.Array) -> cs.GaussianImage:\n",
+    "    # Build the PipelineState\n",
+    "    state = cs.PipelineState(\n",
+    "        pose=pose, optics=optics, detector=detector.update(pixel_size=pixel_size)\n",
+    "    )\n",
+    "    # Build the model\n",
+    "    model = cs.GaussianImage(\n",
+    "        scattering=scattering, specimen=specimen, state=state, observed=observed\n",
+    "    )\n",
+    "    return model\n",
+    "\n",
+    "@jax.jit\n",
+    "def loss(pixel_size: jax.Array) -> jax.Array:\n",
+    "    model = build_loss(pixel_size)\n",
+    "    return model()\n",
+    "\n",
+    "@jax.jit\n",
+    "@jax.value_and_grad\n",
+    "def grad_loss(pixel_size: jax.Array) -> jax.Array:\n",
+    "    model = build_loss(pixel_size)\n",
+    "    return model()"
    ]
   },
   {
@@ -338,7 +378,7 @@
    "outputs": [],
    "source": [
     "# Benchmark loss pipeline\n",
-    "%timeit likelihood = loss(params)"
+    "%timeit likelihood = loss(detector.pixel_size)"
    ]
   },
   {
@@ -348,53 +388,8 @@
    "outputs": [],
    "source": [
     "# Benchmark gradient pipeline\n",
-    "%timeit grad = grad_loss(params)"
+    "%timeit grad = grad_loss(detector.pixel_size)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Jitted loss and gradient pipeline\n",
-    "jitted_loss = jax.jit(lambda params: model(**params))\n",
-    "jitted_grad_loss = jax.jit(jax.grad(lambda params: model(**params)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Benchmark loss pipeline\n",
-    "%timeit loss = jitted_loss(params).block_until_ready()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Benchmark gradient pipeline\n",
-    "%timeit grad = jitted_grad_loss(params)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
