Remove update method in favor of dataclasses.replace. This follows equinox conventions that model updates should be functional (i.e. using tree_at)

--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -28,6 +28,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dataclasses imports\n",
+    "from dataclasses import replace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Plotting imports and function definitions\n",
     "from matplotlib import pyplot as plt\n",
     "from mpl_toolkits.axes_grid1 import make_axes_locatable"
@@ -280,7 +290,7 @@
     "def build_pipeline(pixel_size: jax.Array) -> cs.GaussianImage:\n",
     "    # Build the PipelineState\n",
     "    state = cs.PipelineState(\n",
-    "        pose=pose, optics=optics, detector=detector.update(pixel_size=pixel_size), ice=ice, exposure=exposure\n",
+    "        pose=pose, optics=optics, detector=replace(detector, pixel_size=pixel_size), ice=ice, exposure=exposure\n",
     "    )\n",
     "    # Build the model\n",
     "    model = cs.GaussianImage(\n",
@@ -351,7 +361,7 @@
     "def build_loss(pixel_size: jax.Array) -> cs.GaussianImage:\n",
     "    # Build the PipelineState\n",
     "    state = cs.PipelineState(\n",
-    "        pose=pose, optics=optics, detector=detector.update(pixel_size=pixel_size)\n",
+    "        pose=pose, optics=optics, detector=replace(detector, pixel_size=pixel_size)\n",
     "    )\n",
     "    # Build the model\n",
     "    model = cs.GaussianImage(\n",
@@ -390,6 +400,13 @@
     "# Benchmark gradient pipeline\n",
     "%timeit grad = grad_loss(detector.pixel_size)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
