compute list of Poses! now can compute an image at each lpoint in the helical net. lso use map instead of tree_map so I don't have to convert Arrays to lists

--- a/tutorials/test-helix.ipynb
+++ b/tutorials/test-helix.ipynb
@@ -14,6 +14,7 @@
    "outputs": [],
    "source": [
     "# Jax imports\n",
+    "import equinox as eqx\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
     "import numpy as np\n",
@@ -41,7 +42,7 @@
    "source": [
     "# Image simulator imports\n",
     "import cryojax.simulator as cs\n",
-    "from cryojax.utils import fft, irfft"
+    "from cryojax.utils import fftn, irfftn"
    ]
   },
   {
@@ -60,6 +61,8 @@
     "def plot_images(images, **kwargs):\n",
     "    nimages = len(images)\n",
     "    fig, axes = plt.subplots(ncols=nimages, figsize=(4*nimages, 6))\n",
+    "    if nimages == 1:\n",
+    "        axes = [axes]\n",
     "    for idx, ax in enumerate(axes):\n",
     "        image = images[idx]\n",
     "        plot_image(image, fig, ax, **kwargs)\n",
@@ -103,7 +106,7 @@
     "resolution = 5.28  # Angstroms\n",
     "density = cs.ElectronGrid.from_file(filename, config=dict(pad_scale=1.5))\n",
     "monomer = cs.Specimen(density=density, resolution=resolution)\n",
-    "helix = cs.Helix(subunit=monomer, rise=rise, twist=twist, radius=1.0, n_start=3, n_subunits=30)"
+    "helix = cs.Helix(subunit=monomer, rise=rise, twist=twist, radius=250.0/2, n_start=3, n_subunits=20)"
    ]
   },
   {
@@ -137,9 +140,10 @@
    "outputs": [],
    "source": [
     "# Initialize the image formation pipeline\n",
-    "pose = cs.EulerPose(offset_x=0.0, offset_y=0.0, view_phi=0.0, view_theta=0.0, view_psi=0.0)\n",
+    "pose = cs.EulerPose(offset_x=30.0, offset_y=-10.0, view_phi=0.0, view_theta=0.0, view_psi=0.0)\n",
     "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast=.07)\n",
-    "state = cs.PipelineState(pose=pose, optics=optics)"
+    "exposure = cs.UniformExposure()\n",
+    "state = cs.PipelineState(pose=pose, optics=optics, exposure=exposure)"
    ]
   },
   {
@@ -163,6 +167,24 @@
     "fig, axes = plot_images([scattering_model(), optics_model()])\n",
     "plt.tight_layout()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make sure the jitted pipeline works\n",
+    "model = eqx.filter_jit(optics_model)\n",
+    "plot_images([model()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
