lax map does not produce list when mapping over leading axis of array

--- a/tutorials/test-helix.ipynb
+++ b/tutorials/test-helix.ipynb
@@ -92,8 +92,11 @@
    "outputs": [],
    "source": [
     "# Helical parameters\n",
-    "rise = 9.42  # Angstroms\n",
-    "twist = 27.71  # Degrees"
+    "rise = 10.8  # Angstroms\n",
+    "twist = -23.8  # Degrees\n",
+    "n_start = 2   \n",
+    "radius = 250.0/2 # Angstroms\n",
+    "n_subunits = 30"
    ]
   },
   {
@@ -106,7 +109,7 @@
     "resolution = 5.28  # Angstroms\n",
     "density = cs.ElectronGrid.from_file(filename, config=dict(pad_scale=1.5))\n",
     "monomer = cs.Specimen(density=density, resolution=resolution)\n",
-    "helix = cs.Helix(subunit=monomer, rise=rise, twist=twist, radius=250.0/2, n_start=2, n_subunits=30)"
+    "helix = cs.Helix(subunit=monomer, rise=rise, twist=twist, radius=radius, n_start=n_start, n_subunits=n_subunits)"
    ]
   },
   {
@@ -118,7 +121,7 @@
     "# View the helical net\n",
     "lattice = helix.lattice\n",
     "theta, z = jnp.arctan2(lattice[:, 1], lattice[:, 0]), lattice[:, 2]\n",
-    "plot_net(theta, z)\n"
+    "plot_net(theta, z)"
    ]
   },
   {
@@ -140,7 +143,7 @@
    "outputs": [],
    "source": [
     "# Initialize the image formation pipeline\n",
-    "pose = cs.EulerPose(offset_x=20.0, offset_y=-10.0, view_phi=0.0, view_theta=90.0, view_psi=0.0)\n",
+    "pose = cs.EulerPose(offset_x=0.0, offset_y=0.0, view_phi=0.0, view_theta=90.0, view_psi=0.0)\n",
     "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast=.07)\n",
     "exposure = cs.UniformExposure()\n",
     "state = cs.PipelineState(pose=pose, optics=optics, exposure=exposure)"
@@ -163,6 +166,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Jitted models\n",
+    "jitted_scattering = eqx.filter_jit(scattering_model)\n",
+    "jitted_optics = eqx.filter_jit(optics_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Plot models\n",
     "fig, axes = plot_images([scattering_model(), optics_model()])\n",
     "plt.tight_layout()"
@@ -174,17 +188,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make sure the jitted pipeline works\n",
-    "model = eqx.filter_jit(optics_model)\n",
-    "plot_images([model()])"
+    "%timeit jitted_optics()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
