get rid of native python map

--- a/tutorials/test-helix.ipynb
+++ b/tutorials/test-helix.ipynb
@@ -178,7 +178,7 @@
    "outputs": [],
    "source": [
     "# Plot models\n",
-    "fig, axes = plot_images([scattering_model(), optics_model()])\n",
+    "fig, axes = plot_images([jitted_scattering(), jitted_optics()])\n",
     "plt.tight_layout()"
    ]
   },
