Some type hint refactoring (more clear that using cryojax.typing is just for convenience, not a hard rule). Cleanup of voxel submodule. More careful naming for public and private methods.

--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "# Image simulator imports\n",
     "import cryojax.simulator as cs\n",
-    "from cryojax.utils import fftn, irfftn, fftfreqs"
+    "from cryojax.utils import fftn, irfftn, make_frequencies"
    ]
   },
   {
@@ -204,7 +204,7 @@
     "fig, axes = plt.subplot_mosaic(\"\"\"\n",
     "AAAABBB\n",
     "\"\"\", figsize=(6.5, 3.5))\n",
-    "freqs = fftfreqs((800, 600), pixel_size=resolution)\n",
+    "freqs = make_frequencies((800, 600), pixel_size=resolution)\n",
     "micrograph = solvent.sample(freqs) * optics(freqs) + fftn(detector.sample(freqs))\n",
     "whiten = cs.WhiteningFilter(scattering.shape, micrograph=micrograph)\n",
     "plot_image(irfftn(micrograph.T), fig, axes[\"A\"], label=\"Synthetic micrograph\")\n",
