Move observed data out of the ImagePipeline. This is not standard practice. It's also less leaky and makes model calls more clear

--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -287,11 +287,11 @@
     "masks = [mask]\n",
     "observation_model = cs.GaussianImage(scattering=scattering, specimen=specimen, instrument=instrument_d)\n",
     "observed = mask(observation_model())\n",
-    "model = cs.GaussianImage(scattering=scattering, specimen=specimen, instrument=instrument_d, masks=masks, observed=observed)\n",
-    "simulated, observed, residuals = model.render(), model.observed, model.residuals\n",
+    "model = cs.GaussianImage(scattering=scattering, specimen=specimen, instrument=instrument_d, masks=masks)\n",
+    "simulated, observed = model.render(), observed\n",
     "plot_image(simulated, fig, ax1)\n",
     "plot_image(observed, fig, ax2)\n",
-    "plot_image(residuals, fig, ax3)\n",
+    "plot_image(simulated - observed, fig, ax3)\n",
     "plt.tight_layout()"
    ]
   },
@@ -312,14 +312,14 @@
     "    return eqx.tree_at(lambda m: m.instrument.detector.pixel_size, model, pixel_size)\n",
     "\n",
     "@jax.jit\n",
-    "def compute_loss(pixel_size: jax.Array, model: cs.GaussianImage) -> jax.Array:\n",
+    "def compute_loss(pixel_size: jax.Array, model: cs.GaussianImage, observed: jax.Array) -> jax.Array:\n",
     "    model = update_model(pixel_size, model)\n",
-    "    return model()\n",
+    "    return model(observed)\n",
     "\n",
     "@jax.jit\n",
     "@jax.grad\n",
-    "def compute_grad(pixel_size: jax.Array, model: cs.GaussianImage) -> jax.Array:\n",
-    "    return compute_loss(pixel_size, model)"
+    "def compute_grad(pixel_size: jax.Array, model: cs.GaussianImage, observed: jax.Array) -> jax.Array:\n",
+    "    return compute_loss(pixel_size, model, observed)"
    ]
   },
   {
@@ -329,7 +329,7 @@
    "outputs": [],
    "source": [
     "# Benchmark loss pipeline\n",
-    "%timeit likelihood = compute_loss(detector.pixel_size+.01, model)"
+    "%timeit likelihood = compute_loss(detector.pixel_size+.01, model, observed)"
    ]
   },
   {
@@ -339,8 +339,15 @@
    "outputs": [],
    "source": [
     "# Benchmark gradient pipeline\n",
-    "%timeit grad = compute_grad(detector.pixel_size+.01, model)"
+    "%timeit grad = compute_grad(detector.pixel_size+.01, model, observed)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
