Update test-multiatom.ipynb, issue ##45
changed import in first cell to 

"from cryojax.simulator.scattering._gaussian_mixture import _evaluate_coord_to_grid_sq_distances"

--- a/tutorials/test-multiatom.ipynb
+++ b/tutorials/test-multiatom.ipynb
@@ -24,7 +24,7 @@
     "from jax import config\n",
     "\n",
     "config.update(\"jax_enable_x64\", False)\n",
-    "from cryojax.simulator.scattering import _evaluate_coord_to_grid_sq_distances\n",
+    "from cryojax.simulator.scattering._gaussian_mixture import _evaluate_coord_to_grid_sq_distances\n",
     "from cryojax.simulator.scattering import _build_pixel_grid, IndependentAtomScattering\n",
     "from cryojax.simulator.density import AtomCloud\n",
     "\n"
