implement dataloader for starfiles

--- a/tutorials/test-helix.ipynb
+++ b/tutorials/test-helix.ipynb
@@ -58,15 +58,17 @@
     "    fig.colorbar(im, cax=cax)\n",
     "    return fig, ax\n",
     "\n",
+    "\n",
     "def plot_images(images, **kwargs):\n",
     "    nimages = len(images)\n",
-    "    fig, axes = plt.subplots(ncols=nimages, figsize=(4*nimages, 6))\n",
+    "    fig, axes = plt.subplots(ncols=nimages, figsize=(4 * nimages, 6))\n",
     "    if nimages == 1:\n",
     "        axes = [axes]\n",
     "    for idx, ax in enumerate(axes):\n",
     "        image = images[idx]\n",
     "        plot_image(image, fig, ax, **kwargs)\n",
     "    return fig, axes\n",
+    "\n",
     "\n",
     "def plot_net(theta, z, **kwargs):\n",
     "    fig, ax = plt.subplots(figsize=(4, 4))\n",
@@ -94,8 +96,8 @@
     "# Helical parameters\n",
     "rise = 10.8  # Angstroms\n",
     "twist = -23.8  # Degrees\n",
-    "n_start = 2   \n",
-    "radius = 250.0/2 # Angstroms\n",
+    "n_start = 2\n",
+    "radius = 250.0 / 2  # Angstroms\n",
     "n_subunits = 30"
    ]
   },
@@ -109,7 +111,14 @@
     "resolution = 5.28  # Angstroms\n",
     "density = cs.ElectronGrid.from_file(filename, config=dict(pad_scale=1.5))\n",
     "monomer = cs.Specimen(density=density, resolution=resolution)\n",
-    "helix = cs.Helix(subunit=monomer, rise=rise, twist=twist, radius=radius, n_start=n_start, n_subunits=n_subunits)"
+    "helix = cs.Helix(\n",
+    "    subunit=monomer,\n",
+    "    rise=rise,\n",
+    "    twist=twist,\n",
+    "    radius=radius,\n",
+    "    n_start=n_start,\n",
+    "    n_subunits=n_subunits,\n",
+    ")"
    ]
   },
   {
@@ -143,8 +152,12 @@
    "outputs": [],
    "source": [
     "# Initialize the image formation pipeline\n",
-    "pose = cs.EulerPose(offset_x=0.0, offset_y=0.0, view_phi=0.0, view_theta=90.0, view_psi=0.0)\n",
-    "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast=.07)\n",
+    "pose = cs.EulerPose(\n",
+    "    offset_x=0.0, offset_y=0.0, view_phi=0.0, view_theta=90.0, view_psi=0.0\n",
+    ")\n",
+    "optics = cs.CTFOptics(\n",
+    "    defocus_u=10000, defocus_v=10000, amplitude_contrast=0.07\n",
+    ")\n",
     "exposure = cs.UniformExposure()\n",
     "state = cs.PipelineState(pose=pose, optics=optics, exposure=exposure)"
    ]
@@ -156,8 +169,12 @@
    "outputs": [],
    "source": [
     "# Image formation models\n",
-    "scattering_model = cs.ScatteringImage(scattering=scattering, specimen=helix, state=state)\n",
-    "optics_model = cs.OpticsImage(scattering=scattering, specimen=helix, state=state)"
+    "scattering_model = cs.ScatteringImage(\n",
+    "    scattering=scattering, specimen=helix, state=state\n",
+    ")\n",
+    "optics_model = cs.OpticsImage(\n",
+    "    scattering=scattering, specimen=helix, state=state\n",
+    ")"
    ]
   },
   {
