Masks and filters now do not make their own coordinates by getting the manager directly.

--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -109,7 +109,7 @@
     "shape = (81, 82)\n",
     "pad_scale = 1.5\n",
     "#scattering = cs.NufftScattering(shape=shape, pad_scale=pad_scale, eps=1e-5)\n",
-    "scattering = cs.FourierSliceScattering(shape=shape, pad_scale=pad_scale)"
+    "scattering = cs.FourierSliceExtract(cs.ImageManager(shape=shape, pad_scale=pad_scale))"
    ]
   },
   {
@@ -206,7 +206,7 @@
     "\"\"\", figsize=(6.5, 3.5))\n",
     "freqs = make_frequencies((800, 600), pixel_size=resolution)\n",
     "micrograph = solvent.sample(freqs) * optics(freqs) + fftn(detector.sample(freqs))\n",
-    "whiten = cs.WhiteningFilter(scattering.shape, micrograph=micrograph)\n",
+    "whiten = cs.WhiteningFilter(scattering.manager.shape, micrograph=micrograph)\n",
     "plot_image(irfftn(micrograph.T), fig, axes[\"A\"], label=\"Synthetic micrograph\")\n",
     "plot_image(whiten.filter, fig, axes[\"B\"], label=\"Whitening filter\")\n",
     "plt.tight_layout()"
@@ -227,7 +227,7 @@
    "source": [
     "# Show forward model for a whitened image\n",
     "fig, ax = plt.subplots(figsize=(3.5, 3.5))\n",
-    "filters = [cs.LowpassFilter(scattering.padded_shape, cutoff=0.95), cs.WhiteningFilter(scattering.padded_shape, micrograph=micrograph)]\n",
+    "filters = [cs.LowpassFilter(scattering.manager, cutoff=0.95), cs.WhiteningFilter(scattering.manager, micrograph=micrograph)]\n",
     "filtered_model = cs.ImagePipeline(scattering=scattering, specimen=specimen, instrument=instrument_d, filters=filters)\n",
     "plot_image(filtered_model.render(), fig, ax)"
    ]
@@ -283,7 +283,7 @@
     "# Initialize the model and plot residuals\n",
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
-    "mask = cs.CircularMask(scattering.shape)\n",
+    "mask = cs.CircularMask(scattering.manager)\n",
     "masks = [mask]\n",
     "observation_model = cs.GaussianImage(scattering=scattering, specimen=specimen, instrument=instrument_d)\n",
     "observed = mask(observation_model())\n",
@@ -314,7 +314,7 @@
     "@jax.jit\n",
     "def compute_loss(pixel_size: jax.Array, model: cs.GaussianImage, observed: jax.Array) -> jax.Array:\n",
     "    model = update_model(pixel_size, model)\n",
-    "    return model(observed)\n",
+    "    return model(observed=observed)\n",
     "\n",
     "@jax.jit\n",
     "@jax.grad\n",
