tests passing, user now explicitly must pass RNG keys to sample functions

--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -128,7 +128,7 @@
     "# Initialize the instrument\n",
     "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast=.07)\n",
     "exposure = cs.UniformExposure(N=1e5, mu=0.0)\n",
-    "detector = cs.GaussianDetector(pixel_size=resolution, key=jax.random.PRNGKey(seed=1234), variance=cs.Constant(1.0))\n",
+    "detector = cs.GaussianDetector(pixel_size=resolution, variance=cs.Constant(1.0))\n",
     "instrument_s = cs.Instrument(exposure=exposure)\n",
     "instrument_o = cs.Instrument(exposure=exposure, optics=optics)\n",
     "instrument_d = cs.Instrument(exposure=exposure, optics=optics, detector=detector)"
@@ -148,7 +148,7 @@
    "outputs": [],
    "source": [
     "# Then, choose a model for the solvent\n",
-    "solvent = cs.GaussianIce(key=jax.random.PRNGKey(seed=0), variance=cs.Exp(amplitude=1.0, scale=1.0))"
+    "solvent = cs.GaussianIce(variance=cs.Exp(amplitude=1.0, scale=1.0))"
    ]
   },
   {
@@ -177,11 +177,12 @@
    "outputs": [],
    "source": [
     "# Plot models\n",
+    "key = jax.random.split(jax.random.PRNGKey(0))\n",
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
-    "im1 = plot_image(scattering_model(), fig, ax1, label=\"Exit plane\")\n",
-    "im2 = plot_image(optics_model(), fig, ax2, label=\"Detector plane\")\n",
-    "im3 = plot_image(detector_model(), fig, ax3, label=\"Detector readout\")\n",
+    "im1 = plot_image(scattering_model(key), fig, ax1, label=\"Exit plane\")\n",
+    "im2 = plot_image(optics_model(key), fig, ax2, label=\"Detector plane\")\n",
+    "im3 = plot_image(detector_model(jax.random.PRNGKey(0)), fig, ax3, label=\"Detector readout\")\n",
     "plt.tight_layout()"
    ]
   },
@@ -200,13 +201,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "scattering.manager"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Instantiate image filters\n",
     "fig, axes = plt.subplot_mosaic(\"\"\"\n",
     "AAAABBB\n",
     "\"\"\", figsize=(6.5, 3.5))\n",
+    "key1, key2 = jax.random.split(jax.random.PRNGKey(1234))\n",
     "freqs = make_frequencies((800, 600), pixel_size=resolution)\n",
-    "micrograph = solvent.sample(freqs) * optics(freqs) + fftn(detector.sample(freqs))\n",
-    "whiten = cs.WhiteningFilter(scattering.manager.shape, micrograph=micrograph)\n",
+    "micrograph = solvent.sample(key1, freqs) * optics(freqs) + fftn(detector.sample(key2, freqs))\n",
+    "whiten = cs.WhiteningFilter(scattering.manager, micrograph=micrograph)\n",
     "plot_image(irfftn(micrograph.T), fig, axes[\"A\"], label=\"Synthetic micrograph\")\n",
     "plot_image(whiten.filter, fig, axes[\"B\"], label=\"Whitening filter\")\n",
     "plt.tight_layout()"
@@ -284,10 +295,9 @@
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
     "mask = cs.CircularMask(scattering.manager)\n",
-    "masks = [mask]\n",
     "observation_model = cs.GaussianImage(scattering=scattering, specimen=specimen, instrument=instrument_d)\n",
-    "observed = mask(observation_model())\n",
-    "model = cs.GaussianImage(scattering=scattering, specimen=specimen, instrument=instrument_d, masks=masks)\n",
+    "observed = mask(observation_model(key=jax.random.PRNGKey(1244)))\n",
+    "model = cs.GaussianImage(scattering=scattering, specimen=specimen, instrument=instrument_d, masks=[mask])\n",
     "simulated, observed = model.render(), observed\n",
     "plot_image(simulated, fig, ax1)\n",
     "plot_image(observed, fig, ax2)\n",
